-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.0 Beta 3
-
Linux ARM64
A 15% performance regression has been observed between 5.9.5 and 5.11.0 Beta 3 in the qmlbench test "/opt/benchmarks/auto/animations/comparison/moving-images-script.qml".
For Gerrit Dashboard: QTBUG-67782 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
227473,7 | Only create CallContext objects for bindings that might be signal handlers | 5.11.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |